[package]
name = "solana-keypair-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.18", features = ["derive"]}
env_logger = "0.11.0"
futures = "0.3.30"
log = "0.4.20"
solana-client = "1.17.17"
solana-sdk = "1.17.17"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
